# AI-Study-Partner-and-Exam-Mentor

./: main.py  model_config.py  pyproject.toml  rate_limiter.py  requirements.txt  tools.py
.chainlit/: config.toml
